add user profile function
